--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -12,10 +12,12 @@
   height: 90%;
 }
 
-.north-west.body-message {
-  margin-top: 80px !important;
-}
 
 .north-west {
   border-bottom: solid !important;
+}
+
+.north-west.body-message {
+  margin-top: 80px !important;
+  border-bottom: none;
 }
