--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -4,7 +4,7 @@
 
 .reveal section img {
   margin: 0;
-  border: 1px solid #1e90ff;
+  border: 0;
 }
 
 .reveal img, .reveal video, .reveal iframe {
