--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -5,11 +5,17 @@
 .reveal section img {
   margin: 0;
   border: 0;
+  background: rgba(255, 255, 255, 0) !important;
 }
 
 .reveal img, .reveal video, .reveal iframe {
   width: 90%;
   height: 90%;
+}
+
+.south-east img {
+  width: 45%;
+  height: 45%;
 }
 
 
