--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -6,6 +6,7 @@
   margin: 0;
   border: 0;
   background: rgba(255, 255, 255, 0) !important;
+  margin-right: 30px;
 }
 
 .reveal img, .reveal video, .reveal iframe {
